# GASAL2-Py

./: 404.html  CITATION.cff.in  CMakeLists.txt  MANIFEST.IN  Makefile  README.md  gasal_py.cpp  gasal_py_nobatch.cpp  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  test.py
.github/workflows/: docs.yml  release.yml  wheels.yml
docs/: index.md  seo.json
include/: gasal.h
search/: search_index.json
src/gasalwrap/: __init__.py
tests/: conftest.py  test.py  test_align_smoke.py  test_import.py  test_smoke.py
