[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12", "cmake>=3.23"]
build-backend = "scikit_build_core.build"

[project]
name = "gasal2-py"
dynamic = ["version"]
description = "Python bindings for GASAL2 (GPU-accelerated pairwise alignment)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Eli Niktab", email = "maniktab@gmail.com" }]
keywords = ["GASAL2", "GASAL2-Py", "GASAL2 python", "CUDA", "GPU", "bioinformatics", "alignment", "smith-waterman"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C++",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/eniktab/GASAL2-Py"
Issues = "https://github.com/eniktab/GASAL2-Py/issues"

[project.optional-dependencies]
test = ["pytest>=8", "pytest-xdist>=3", "pytest-timeout>=2"]

[tool.scikit-build]
minimum-version = "0.9"
# Rebuild the extension in editable installs when sources change
editable.rebuild = true
# Optional: keep build artifacts in a predictable folder
build-dir = "build/{wheel_tag}"

[tool.scikit-build.metadata]
version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.scikit-build.cmake]
version = ">=3.23"
args = ["-G", "Ninja"]  

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"


